# trie-vector

./: .gitignore  .travis.yml  Array.hs  ArrayArray.hs  Bench.hs  ByteArray.hs  Deque.hs  LICENSE  MemProf  MemProf.hs  README.md  Tests.hs  Unboxed.hs  Vector.hs  notes.txt  persistent-vector.cabal  stack.yaml  trie-vector.cabal
Data/: TrieVector.hs
Data/TrieVector/: Array.hs  ArrayArray.hs  ArrayPrim.hs  ArrayPrimWrap.hs  ByteArray.hs  SmallArrayPrim.hs  Unboxed.hs
benchmarks/: Benchmarks.hs  Main.hs  Misc.hs  trie-vector-benchmarks.cabal
memtest/: MemTest.hs
old_notes/: ArrTraverse.hs  ArrayArrayUnboxed.hs  IntSeq.hs  intseq (Case Conflict)  notes.txt  preliminary_bench.hs
old_notes/hashmap/: Array.hs  Cached.hs
old_notes/seq/: Any16  Any16.hs  AnyArray.hs  AnyExp  AnyExp.hs  ArrayArray16  ArrayArray16.hs  Arrayed16.hs  Flat16.hs  Flat16Bottom.hs  Flat32.hs  Test.hs  Unsafe.hs  bench.hs  firstset.hs  notes.txt
old_notes/seq/aa/: Array.hs  ArrayArray.hs  ArrayArray16v2.hs  ArrayArray16v3.hs  ArrayArray2.hs
old_notes/seq/aav2/: Array.hs  ArrayArray16.hs  ArrayArray32.hs  Bench.hs
old_notes/seq/aav3_unboxed_unsafeix/: ArrayArray16.hs  ArrayArray32.hs  ArrayArrayUnboxed.hs  Bench.hs  ByteArray.hs  notes.txt
old_notes/seq/aav4_tailcache/: ArrayArray.hs  ArrayArray16.hs  Bench.hs  out.html
tests/: Tests.hs
