
name:                trie-vector
version:             0.1.0.0
synopsis:            Fast Clojure-style immutable vectors
license:             MIT
license-file:        LICENSE
author:              AndrasKovacs
maintainer:          puttamalac@gmail.com
copyright:           2014-2015 András Kovács
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  default-language: Haskell2010

  exposed-modules:
        Data.TrieVector,
        Data.TrieVector.Unboxed,
        Data.TrieVector.Array,
        Data.TrieVector.ArrayArray,
        Data.TrieVector.ByteArray
  other-modules:
        Data.TrieVector.ArrayPrim,
        Data.TrieVector.SmallArrayPrim,
        Data.TrieVector.ArrayPrimWrap

  ghc-options:
    -fno-warn-name-shadowing -fno-warn-missing-signatures -O2 -fllvm

  build-depends:
    base >=4.7,
    ghc-prim >= 0.3.1.0,
    primitive >= 0.5.4.0,
    array-primops >= 0.2.0.0

test-suite tests
  hs-source-dirs: tests
  default-language: Haskell2010
  main-is: Tests.hs
  type: exitcode-stdio-1.0

  build-depends:
    trie-vector,
    tasty,
    QuickCheck,
    tasty-quickcheck,
    base >= 4.7.0.0,
    ghc-prim,
    lens

  ghc-options:
    -Wall -O2 -fno-warn-name-shadowing -fno-warn-missing-signatures -fno-warn-unused-binds
    -fno-warn-unused-imports

benchmark main
  default-language: Haskell2010

  hs-source-dirs: benchmarks

  main-is: Main.hs
  type: exitcode-stdio-1.0

  build-depends:
    trie-vector,
    unordered-containers,
    containers,
    base,
    criterion,
    vector,
    ghc-prim,
    random,
    primitive

  ghc-options:
    -Wall -O2 -rtsopts -fllvm
    -fno-warn-name-shadowing -fno-warn-missing-signatures
    -fno-warn-unused-binds -fno-warn-unused-imports

benchmark copy
  default-language: Haskell2010
  type: exitcode-stdio-1.0

  hs-source-dirs: benchmarks

  main-is: Copy.hs
  type: exitcode-stdio-1.0

  build-depends:
    trie-vector,
    unordered-containers,
    containers,
    base,
    criterion,
    vector,
    ghc-prim,
    random,
    primitive

  ghc-options:
    -Wall -O2 -rtsopts -fllvm
    -fno-warn-name-shadowing -fno-warn-missing-signatures
    -fno-warn-unused-binds

benchmark misc
  default-language: Haskell2010
  type: exitcode-stdio-1.0

  hs-source-dirs: benchmarks
  main-is: Misc.hs

  build-depends:
    trie-vector, base, ghc-prim, primitive, random, vector,
    containers, unordered-containers

  ghc-options:
    -Wall 


