name:       trie-vector-benchmarks
version:    0
build-type: Simple

cabal-version: >=1.2

executable trie-vector-benchmarks
  ghc-options: 
    -Wall -O2 -fllvm -fno-warn-missing-signatures
    -fno-warn-name-shadowing -fno-warn-unused-binds

  hs-source-dirs: .. .

  main-is: Benchmarks.hs

  other-modules:
        Data.TrieVector
        Data.TrieVector.Unboxed        

  build-depends:
         base
       , criterion
       , ghc-prim
       , primitive
       , random
       , vector






